<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#000000A0">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#000"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pause_resume"
                android:text="@string/pause_resume"
                style="@style/PauseDialogButton"/>

            <TextView
                android:id="@+id/pause_restart"
                android:text="@string/pause_restart"
                style="@style/PauseDialogButton"/>

            <TextView
                android:id="@+id/pause_options"
                android:text="@string/pause_options"
                style="@style/PauseDialogButton"/>

            <TextView
                android:id="@+id/pause_menu"
                android:text="@string/pause_menu"
                style="@style/PauseDialogButton"/>

            </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>