<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center">

        <mini.paranormalgolf.Activities.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/activity_background"
            android:textSize="20dp"
            android:text="@string/help_page_1_text_1"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>
        <mini.paranormalgolf.Activities.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/activity_background"
            android:textSize="20dp"
            android:text="@string/help_page_1_text_2"
            android:gravity="center"/>
        <mini.paranormalgolf.Activities.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/activity_background"
            android:textSize="20dp"
            android:text="@string/help_page_1_text_3"
            android:gravity="center"/>
    </LinearLayout>
</ScrollView>