<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mini.paranormalgolf.Activities.OptionsActivity"
    android:background="@color/activity_background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/menu"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <mini.paranormalgolf.Helpers.TitleTextView
            android:id="@+id/options_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/activity_main_menu_title"
            android:textColor="@color/activity_main_menu_title"
            android:text="@string/options_activity_title"
            android:layout_marginTop="20dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <mini.paranormalgolf.Helpers.OptionCheckBox
                    android:id="@+id/options_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/OptionsButton"
                    android:text="@string/options_activity_music"
                    android:onClick="onMusicClick"
                    android:tag="0"/>
                <mini.paranormalgolf.Helpers.OptionCheckBox
                    android:id="@+id/options_sounds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/OptionsButton"
                    android:text="@string/options_activity_sound"
                    android:onClick="onSoundClick"
                    android:tag="1"/>
                <mini.paranormalgolf.Helpers.OptionCheckBox
                    android:id="@+id/options_vibrations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/OptionsButton"
                    android:text="@string/options_activity_vibrations"
                    android:onClick="onVibrationsClick"
                    android:tag="2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="10dp">
                    <mini.paranormalgolf.Helpers.OptionCheckBox
                        android:id="@+id/options_pl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/OptionsButtonLanguage"
                        android:text="pl"
                        android:onClick="onPolishPick"
                        android:tag="3"/>
                    <View
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"/>
                    <mini.paranormalgolf.Helpers.OptionCheckBox
                        android:id="@+id/options_en"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/OptionsButtonLanguage"
                        android:text="en"
                        android:onClick="onEnglishPick"
                        android:tag="3"/>
                    </LinearLayout>
                <mini.paranormalgolf.Helpers.OptionCheckBox
                    android:id="@+id/options_shadows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/OptionsButton"
                    android:text="@string/options_activity_shadows"
                    android:onClick="onShadowsClick"
                    android:tag="4"/>
            </LinearLayout>

        </ScrollView>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <mini.paranormalgolf.Helpers.TitleTextView
                    android:id="@+id/options_cancel_button"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    style="@style/OptionsButtonSaveCancel"
                    android:text="@string/cancel"
                    android:layout_marginLeft="50dp"
                    android:onClick="onCancelClick"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right">
                <mini.paranormalgolf.Helpers.TitleTextView
                    android:id="@+id/options_save_button"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    style="@style/OptionsButtonSaveCancel"
                    android:text="@string/save"
                    android:layout_marginRight="50dp"
                    android:onClick="onSaveClick"/>
            </LinearLayout>

            </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

    </LinearLayout>

</RelativeLayout>
