<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mini.paranormalgolf.Activities.HelpActivity"
    android:orientation="vertical"
    android:background="@color/activity_background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/menu"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <mini.paranormalgolf.Controls.TitleTextView
            android:id="@+id/help_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/activity_main_menu_title"
            android:textColor="@color/activity_main_menu_title"
            android:text="@string/help_activity_title"
            android:layout_marginTop="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="40dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@drawable/help_background"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <RelativeLayout
                    android:id="@+id/help_view_to_inflate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <mini.paranormalgolf.Controls.ItemTextView
                            android:id="@+id/help_menu"
                            style="@style/HelpButton"
                            android:text="@string/help_menu"
                            android:onClick="onMenuClick"/>

                        </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <mini.paranormalgolf.Controls.ItemTextView
                            android:id="@+id/help_next"
                            style="@style/HelpButton"
                            android:text="@string/help_next"
                            android:onClick="onNextClick"/>

                    </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
