<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="mini.paranormalgolf.Activities.LevelsActivity"
                android:background="@color/activity_background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/select_level"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/select_level_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/activity_main_menu_title"
            android:textColor="@color/activity_main_menu_title"
            android:text="@string/select_level_title"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_select_level_margin_top">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <ListView
                    android:id="@+id/levels_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/board_image"
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:background="@color/activity_background"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/level_select_first_star"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@android:color/transparent"/>
                    <ImageView
                        android:id="@+id/level_select_second_star"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@android:color/transparent"/>
                    <ImageView
                        android:id="@+id/level_select_third_star"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@android:color/transparent"/>


                </LinearLayout>

                <TextView
                    android:id="@+id/levels_select_best_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/activity_background"
                    android:textSize="15dp"
                    android:text="podsaf"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/select_level_back"
                        style="@style/LevelSelectButton"
                        android:text="@string/select_level_back"
                        android:onClick="onBackClick"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/select_level_start"
                        style="@style/LevelSelectButton"
                        android:text="@string/select_level_start"
                        android:onClick="onStartClick"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
